--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm run build-ts && npm run serve",
     "serve": "node dist/server.js",
+    "watch": "tsc-watch --onSuccess 'node dist/server.js'",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
     "gen-proto": "./node_modules/@grpc/proto-loader/build/bin/proto-loader-gen-types.js --longs=Number --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=./app/proto/ ./proto/*.proto"
@@ -18,6 +19,7 @@
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
     "class-validator": "^0.13.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "graphql": "^15.8.0",
     "ramda": "^0.27.1",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.1",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "tsc-watch": "^4.6.0"
   }
 }
