--- a/.build/Dockerfile
+++ b/.build/Dockerfile
@@ -7,6 +7,7 @@ COPY . ${APP_PATH}
 WORKDIR ${APP_PATH}
 
 RUN npm install && \
+    npm run gen-proto && \
     npm run build-ts
 
 CMD ["npm", "run", "serve"]
