--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -8,6 +8,8 @@ jobs:
       id-token: 'write'
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
       - name: authenticate with gcloud
         uses: google-github-actions/auth@v0
         with:
