--- a/.github/workflows/deploy_preprod.yaml
+++ b/.github/workflows/deploy_preprod.yaml
@@ -22,3 +22,13 @@ jobs:
           git_hash=$(git rev-parse --short "$GITHUB_SHA")
           gcloud builds submit \
             --substitutions=_LOCATION="europe-west1",_REPOSITORY="graphie",_IMAGE="graphie",_SHA=$git_hash
+
+  dispatch:
+    needs: ["build"]
+    uses: shigedangao/graphie/.github/workflows/reusable-dispatch.yaml@staging
+    with:
+      app_name: graphie
+      env: preprod
+    secrets:
+      token: ${{ secrets.GRAPHIE_TOKEN }}
+
