--- a/.github/workflows/reusable-dispatch.yaml
+++ b/.github/workflows/reusable-dispatch.yaml
@@ -23,12 +23,12 @@ jobs:
           curl -u ":${{ secrets.token }}" \
             -X POST \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/shigedangao/mask-kube/actions/workflows/deploy_app/dispatches \
+            https://api.github.com/repos/shigedangao/mask-kube/actions/workflows/deploy_app.yaml/dispatches \
             -d '{
               "ref": "main",
               "inputs": {
-                "tag":"$git_hash",
-                "app_name": "${{ inputs.app_name}}",
+                "tag": "'$git_hash'",
+                "app_name": "${{ inputs.app_name }}",
                 "env": "${{ inputs.env }}"
               }
             }'
