--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch": "tsc-watch --onSuccess 'node dist/server.js'",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
-    "gen-proto": "./node_modules/@grpc/proto-loader/build/bin/proto-loader-gen-types.js --longs=Number --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=./app/proto/ ./mask/proto/*.proto"
+    "gen-proto": "./node_modules/@grpc/proto-loader/build/bin/proto-loader-gen-types.js --longs=Number --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=./app/proto/ ./mask/proto/*.proto",
+    "test": "PROTO_PATH=../mask/proto HOSPITAL_PROTO_ADDRESS='f' PCR_PROTO_ADDRESS='bar' jest"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.4.5",
@@ -29,7 +30,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.1",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.4",
     "ts-node": "^10.4.0",
     "tsc-watch": "^4.6.0"
   }
