--- a/tsconfig.json
+++ b/tsconfig.json
@@ -102,6 +102,6 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "app/**/*"
+    "app/**/*",
   ]
 }
